Fix title spacing

--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -118,6 +118,7 @@ table.timetable {
 .title {
   border-bottom: none;
   padding-bottom: 0px;
+  line-height: 1.4em;
 }
 @media(min-width: 900px) {
   .title {
